Day-117-eBPF-Kernel-Networking/2-hubble-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-expose
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 12000
    name: http
  selector:
    k8s-app: hubble-ui
